--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# theme: minimal-mistakes-jekyll
+theme: minimal-mistakes-jekyll
 remote_theme: "mmistakes/minimal-mistakes"
 minimal_mistakes_skin: "air"
 title: Louis Park's blog
