--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ remote_theme : mmistakes/minimal-mistakes
 minimal_mistakes_skin    : "air" #, "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "ko-KR"
 title                    : "Louis Park’s blog"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
@@ -97,9 +97,9 @@ analytics:
 author:
   name             : "Seonkyu Park"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  bio              : "Working on OCR related projects @kakaoenterprise. Learning computer graphics for hobby"
+  location         : "Seoul, Republic of Korea"
+  email            : "SunQ0313@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
