add company link to bio

--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ analytics:
 author:
   name             : "Seonkyu Park"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Working on OCR related projects @kakaoenterprise. Learning computer graphics for hobby"
+  bio              : "Working on OCR related projects @[kakaoenterprise](https://www.kakaoenterprise.com/). Learning computer graphics with blender, for hobby"
   location         : "Seoul, Republic of Korea"
   email            : "SunQ0313@gmail.com"
   links:
