--- a/_config.yml
+++ b/_config.yml
@@ -110,6 +110,9 @@ author:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       url: "https://www.facebook.com/sunq.park0313/"
+    - label: "Linked-in"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/박-선규-503b6b177"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/SunQpark"
@@ -126,6 +129,9 @@ footer:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       url: "https://www.facebook.com/sunq.park0313/"
+    - label: "Linked-in"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/박-선규-503b6b177"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/SunQpark"
